<resources>
    <string name="app_name">MessengerApp</string>
    <string name="authentification_avatar">Avatar image placeholder</string>

    <string name="nickname">Enter your nickname</string>
    <string name="password">Enter your password</string>
    <string name="what_i_do">What I do</string>

    <string name="login_button_text">SIGN IN</string>
    <string name="not_registered_text">Not registered?</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="plus_icon_desc">plus icon</string>
    <string name="home_title">Home</string>
    <string name="settings_title">Settings</string>
    <string name="profile_picture">profile picture</string>
    <string name="update">Update</string>
    <string name="update_your_nickname">update your nickname</string>
    <string name="update_your_job">update your job</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="please_wait">PLEASE WAIT...</string>
    <string name="back_button_arrow">back button</string>

    <string name="no_users_to_show">No users to show</string>
    <string name="no_conversations">No conversations found</string>

    <string name="error_loading_users">Could not fetch users</string>
    <string name="error_loading_conversations">Could not fetch conversations</string>
    <string name="send_message">Send message</string>
    <string name="message">Message</string>
    <string name="send_message_to_start_conversation">Send message to start conversation</string>

</resources>