<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/authentification_avatar"
        android:layout_width="@dimen/authentification_avatar_width"
        android:layout_height="@dimen/authentification_avatar_height"

        android:layout_marginTop="@dimen/authentification_avatar_margin_top"
        android:contentDescription="@string/authentification_avatar"

        android:src="@drawable/avatar_image_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/authentification_nickname_input_layout"
        android:layout_width="@dimen/authentification_input_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/authentification_margin_between_avatar_and_inputs"
        android:padding="0dp"

        app:boxBackgroundMode="outline"

        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authentification_avatar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/authentification_nickname_input_edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_background"

            android:gravity="center"
            android:hint="@string/nickname"

            android:inputType="text"
            android:maxLines="1"
            android:paddingVertical="@dimen/authentification_input_vertical_padding"

            android:textSize="@dimen/authentification_input_text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/authentification_password_input_layout"

        android:layout_width="@dimen/authentification_input_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/authentification_margin_between_inputs"
        android:padding="0dp"

        app:boxBackgroundMode="outline"

        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authentification_nickname_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/authentification_password_input_edit_layout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_background"

            android:gravity="center"
            android:hint="@string/password"

            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingVertical="@dimen/authentification_input_vertical_padding"

            android:textSize="@dimen/authentification_input_text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/authentification_margin_between_inputs_and_button"

        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingHorizontal="@dimen/login_button_horizontal_padding_large"
        android:paddingVertical="@dimen/login_button_vertical_padding"

        android:text="@string/login_button_text"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/authentification_button_text_size"

        app:backgroundTint="@color/button_blue"
        app:cornerRadius="@dimen/authentification_button_corner_radius"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authentification_password_input_layout" />


    <TextView
        android:id="@+id/not_registered_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="@dimen/authentification_margin_between_not_registered_button_and_text"
        android:text="@string/not_registered_text"

        android:textColor="@color/black_blurry"

        app:layout_constraintBottom_toTopOf="@id/sign_up_button_in_login_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_button_in_login_fragment"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginBottom="@dimen/authentification_bottom_margin"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingHorizontal="@dimen/login_button_horizontal_padding"

        android:paddingVertical="@dimen/login_button_vertical_padding"
        android:text="@string/sign_up_text"
        android:textAllCaps="true"
        android:textColor="@color/black_blurry"

        android:textSize="@dimen/authentification_button_text_size"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="@dimen/authentification_button_corner_radius"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/black_blurry" />

</androidx.constraintlayout.widget.ConstraintLayout>