<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/app_bar_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_chat_height_collapsed"
        android:background="@color/navbar_blue"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/expanded_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="@dimen/back_arrow_size"
                android:layout_height="@dimen/back_arrow_size"
                android:layout_marginStart="@dimen/appbar_chat_margin_start"
                android:layout_marginTop="@dimen/appbar_chat_margin_top"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/back_button_arrow"
                android:scaleType="fitXY"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/appbar_chat_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/appbar_chat_margin_start"
                android:layout_marginBottom="@dimen/appbar_chat_job_margin_top"
                android:paddingHorizontal="@dimen/appbar_chat_username_padding_horizontal"
                android:textColor="@color/white"
                android:textSize="@dimen/appbar_chat_username_font_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/appbar_chat_job"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Sayed Eftiaz" />

            <TextView
                android:id="@+id/appbar_chat_job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/appbar_chat_margin_start"
                android:layout_marginBottom="@dimen/appbar_chat_job_margin_bottom"
                android:paddingHorizontal="@dimen/appbar_chat_username_padding_horizontal"
                android:textColor="@color/app_bar_job_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Manager" />

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="@dimen/conversation_summary_profile_picture_size"
                android:layout_height="@dimen/conversation_summary_profile_picture_size"
                android:layout_marginEnd="@dimen/appbar_chat_margin_start"
                android:layout_marginBottom="@dimen/appbar_chat_profile_picture_margin_bottom"
                android:contentDescription="@string/profile_picture"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:src="@drawable/avatar_image_placeholder" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/collapsed_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/appbar_height_collapsed"
            android:layout_gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageButton
                android:id="@+id/back_button_collapsed"
                android:layout_width="@dimen/back_arrow_size"
                android:layout_height="@dimen/back_arrow_size"
                android:layout_marginStart="@dimen/appbar_chat_margin_start"
                android:layout_marginBottom="@dimen/appbar_chat_collapsed_margin_bottom"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/back_button_arrow"
                android:scaleType="fitXY"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/appbar_chat_username_collapsed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/appbar_chat_username_and_job_margin_horizontal"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="@dimen/appbar_chat_username_font_size_collapsed"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/appbar_chat_job_collapsed"
                app:layout_constraintEnd_toStartOf="@id/profile_picture_collapsed"
                app:layout_constraintStart_toEndOf="@id/back_button_collapsed"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="Sayed Eftiaz" />

            <TextView
                android:id="@+id/appbar_chat_job_collapsed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/appbar_chat_username_and_job_margin_horizontal"
                android:layout_marginBottom="@dimen/appbar_chat_collapsed_margin_bottom"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/app_bar_job_color"
                android:textSize="@dimen/appbar_chat_job_font_size_collapsed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/profile_picture_collapsed"
                app:layout_constraintStart_toEndOf="@id/back_button_collapsed"
                tools:text="Manager" />

            <ImageView
                android:id="@+id/profile_picture_collapsed"
                android:layout_width="@dimen/conversation_summary_profile_picture_size"
                android:layout_height="@dimen/conversation_summary_profile_picture_size"
                android:layout_marginEnd="@dimen/appbar_chat_username_and_job_margin_horizontal"
                android:layout_marginBottom="@dimen/appbar_chat_collapsed_margin_bottom"
                android:contentDescription="@string/profile_picture"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:src="@drawable/avatar_image_placeholder" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toTopOf="@id/message_input_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_container"
        tools:listitem="@layout/message_received_layout" />

    <TextView
        android:id="@+id/empty_state_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_message_to_start_conversation"
        android:textColor="@color/send_message_to_start_conversation_color"
        android:textSize="@dimen/send_message_to_start_conversation_text_size"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/message_input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/message_input_container_padding"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/message_input_card_view_margin_horizontal"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/message_card_background_color"
            app:cardCornerRadius="@dimen/message_input_card_view_border_radius"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/message_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/message_input_edit_text_height"
                android:autofillHints=""
                android:background="@android:color/transparent"
                android:hint="@string/message"
                android:imeOptions="actionSend"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLines="4"
                android:minHeight="@dimen/message_input_edit_text_min_height"
                android:paddingHorizontal="@dimen/message_input_edit_text_padding_horizontal"
                android:paddingVertical="@dimen/message_input_edit_text_padding_vertical"
                android:textColor="@android:color/black"
                android:textColorHint="@color/send_message_edit_text_color"
                android:textSize="@dimen/message_input_edit_text_font_size" />

            <ImageButton
                android:id="@+id/send_button"
                android:layout_width="@dimen/message_input_edit_text_image_size"
                android:layout_height="@dimen/message_input_edit_text_image_size"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="@dimen/message_input_edit_text_image_margin_end"
                android:background="@drawable/ic_send"
                android:contentDescription="@string/send_message"
                android:scaleType="center"
                app:tint="@color/white" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>